--- a/jdbc_workspace/03_Properties_ExceptionHandling/resources/member-query.properties
+++ b/jdbc_workspace/03_Properties_ExceptionHandling/resources/member-query.properties
@@ -5,3 +5,8 @@
 
 selectAll = select * from member order by enroll_date desc
 insertMember = insert into member values(?, ?, ?, ?, ?, ?, ?, ?, ?, default)
+selectOneMember = select * from member where member_id = ?
+selectOne = select * from member where member_id=?
+selectByName = select * from member where member_name like ?
+updateMember = update member set password=?,email=?",phone=?",address=? where member_id=?
+deleteMember = delete from member where member_id=?
