--- a/jdbc_workspace/Prod_Stock_Manager/.project
+++ b/jdbc_workspace/Prod_Stock_Manager/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Prod_Stock_Management_Program</name>
+	<name>Prod_Stock_Manager</name>
 	<comment></comment>
 	<projects>
 	</projects>
