--- a/web_server_workspace/02_hellomvc/resources/sql/board/board-query.properties
+++ b/web_server_workspace/02_hellomvc/resources/sql/board/board-query.properties
@@ -13,3 +13,4 @@ selectOneAttachment = select * from attachment where board_no = ? and status = '
 deleteBoard = delete from board where no = ?
 updateBoard = update board set title = ?, content = ? where no = ?
 # cf. updateBoard - writer - no need to update
+deleteAttachment = update attachment set status = 'N' where no = ?
