--- a/web_server_workspace/02_hellomvc/resources/sql/board/board-query.properties
+++ b/web_server_workspace/02_hellomvc/resources/sql/board/board-query.properties
@@ -14,3 +14,4 @@ deleteBoard = delete from board where no = ?
 updateBoard = update board set title = ?, content = ? where no = ?
 # cf. updateBoard - writer - no need to update
 deleteAttachment = update attachment set status = 'N' where no = ?
+insertBoardComment = insert into board_comment(no, comment_level, writer, content, board_no, comment_ref)values(seq_board_comment_no.nextval, ?, ?, ?, ?, ?)
