--- a/web_server_workspace/02_hellomvc/WebContent/WEB-INF/web.xml
+++ b/web_server_workspace/02_hellomvc/WebContent/WEB-INF/web.xml
@@ -34,4 +34,11 @@
   <!-- error 페이지의 위치 -->
   <location>/WEB-INF/views/common/error.jsp</location>
   </error-page>
+  <!-- Resource 참조 -->
+  <resource-ref>
+  	<description>Mvc Application DBCP</description>
+  	<res-ref-name>jdbc/myoracle</res-ref-name>
+  	<res-type>javax.sql.DataSource</res-type>
+  	<res-auth>Container</res-auth>
+  </resource-ref>
 </web-app>
