--- a/web_server_workspace/01_helloweb/WebContent/WEB-INF/web.xml
+++ b/web_server_workspace/01_helloweb/WebContent/WEB-INF/web.xml
@@ -51,9 +51,11 @@
   </servlet>
   <servlet-mapping>
   	<servlet-name>menuOrderServlet</servlet-name>
-  	<url-pattern>/menuOrder.do</url-pattern>
+  	<url-pattern>menuOrder.do</url-pattern>
   </servlet-mapping>
   
   
 
 </web-app>
+
+  
