--- a/web_server_workspace/maven-mybatis/src/main/resources/url-command.properties
+++ b/web_server_workspace/maven-mybatis/src/main/resources/url-command.properties
@@ -10,3 +10,4 @@
 /student/selectList.do = com.kh.mybatis.student.controller.SelectStudentListController
 /emp/search1.do = com.kh.mybatis.emp.controller.EmpSearchController1
 /emp/search2.do = com.kh.mybatis.emp.controller.EmpSearchController2
+/emp/search3.do = com.kh.mybatis.emp.controller.EmpSearchController3
