--- a/spring_workspace/hello-spring/src/main/webapp/WEB-INF/web.xml
+++ b/spring_workspace/hello-spring/src/main/webapp/WEB-INF/web.xml
@@ -3,13 +3,34 @@
 		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"           
 		xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 		version="3.1">
-	<!-- #1.3 web-modulde version 3.1 upgrade-->
-
+	<!-- #1.3 web-modulde version 3.1 upgrade ↑ -->
+	<!-- #2. utf-8 인코딩 처리 -->
+	<filter>
+	<filter-name>encodingFilter</filter-name>
+	<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+	<init-param>
+		<param-name>encoding</param-name>
+		<param-value>utf-8</param-value>
+	</init-param>
+	<init-param> 
+      		<param-name>forceEncoding</param-name> 
+       	<param-value>true</param-value> 
+    </init-param>
+	</filter>
+ 	<filter-mapping>
+ 		<filter-name>encodingFilter</filter-name>
+ 		<url-pattern>/*</url-pattern>
+ 	</filter-mapping>
+ 	
 	<!-- #3. Application Context 빈 설정파일 -->
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/root-context.xml</param-value>
+		<!-- #8.1. security-context 설정파일 추가 -->
+		<param-value>
+			/WEB-INF/spring/root-context.xml
+			/WEB-INF/spring/security-context.xml			
+			</param-value>
 	</context-param>
 	
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
@@ -33,21 +54,4 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-<!-- #2. utf-8 인코딩 처리 -->
-<filter>
-	<filter-name>encodingFilter</filter-name>
-	<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-	<init-param>
-		<param-name>encoding</param-name>
-		<param-value>utf-8</param-value>
-	</init-param>
-	<init-param> 
-      		<param-name>forceEncoding</param-name> 
-       	<param-value>true</param-value> 
-    </init-param>
-</filter>
- 	<filter-mapping>
- 		<filter-name>encodingFilter</filter-name>
- 		<url-pattern>/*</url-pattern>
- 	</filter-mapping>
 </web-app>
