--- a/spring_workspace/hello-spring-securty/src/main/webapp/WEB-INF/web.xml
+++ b/spring_workspace/hello-spring-securty/src/main/webapp/WEB-INF/web.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-			   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"           
-			   xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-			   version="3.1">
+		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"           
+		xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+		version="3.1">
 	
 	<!-- #3. 공용 applicationContext관련 설정파일에 security-context.xml 설정파일 추가 -->
-	<!--  /WEB-INF/spring/*-context.xml 와 같이 wildcard 사용가능 -->
+	<!-- 설정파일이 여러개라면 /WEB-INF/spring/*-context.xml 와 같이 wildcard 사용가능 -->
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<!--
 			설정파일이 여러개라면 개행 또는 공란으로 나열하면 됨
+			똑같이 application-context인데 설정파일이 하나 더 있는 것.
+			같은 context로 묶임
 		-->
 		<param-value>
 			/WEB-INF/spring/application-context.xml
@@ -70,12 +72,16 @@
   	</filter-mapping>
 	
 	<!-- #2. springSecurityFilterChain 등록 -->
+	<!-- filter와 filter-mapping이 하나의 쌍 -->
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
+		<!-- 처리할 필터가 무엇인지.
+			 DelegatingFilterProxy : 필터체인의 대문역할 -->
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>	
 	</filter>
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
+		<!-- 어떤 url에 대해서 필터를 적용할지 : 전부 -->
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
